--- a/src/components/careers/styles.module.css
+++ b/src/components/careers/styles.module.css
@@ -6,7 +6,7 @@
 
 .title {
   text-align: center;
-  font-family: LehmannW08;
+  font-family: "FinalSix";
   font-size: 34px;
   font-weight: 400;
   color: #bc9c6b;
@@ -52,7 +52,7 @@
 }
 
 .vagasTitle {
-  font-family: LehmannW08;
+  font-family: "FinalSix";
   font-weight: 400;
   font-size: 26px;
   line-height: 32px;
