--- a/src/components/about/content/styles.module.css
+++ b/src/components/about/content/styles.module.css
@@ -6,7 +6,7 @@
 }
 
 .title {
-    font-family: LehmannW08;
+    font-family: "FinalSix";
     font-size: 34px;
     font-weight: 400;
     line-height: 44px;
@@ -65,11 +65,12 @@
     .aboutSection {
         padding: 4rem 1rem;
     }
-    
+
     .title {
         margin-top: 4rem;
         font-size: 22px;
     }
+
     .subtitle {
         font-size: 14px;
         margin-bottom: 58px;
