--- a/src/components/areas/areas-cards/styles.module.css
+++ b/src/components/areas/areas-cards/styles.module.css
@@ -7,7 +7,7 @@
 }
 
 .title {
-  font-family: LehmannW08;
+  font-family: "FinalSix";
   font-weight: 400;
   font-size: 24px;
   line-height: 32px;
@@ -49,7 +49,7 @@
   color: #bc9c6b;
   font-size: 16px;
   font-weight: 400;
-  font-family: LehmannW08;
+  font-family: "FinalSix";
   margin-bottom: 0.5rem;
 }
 
