--- a/src/components/homepage/section-about/styles.module.css
+++ b/src/components/homepage/section-about/styles.module.css
@@ -45,7 +45,7 @@
   letter-spacing: 1px;
   font-weight: 400;
   text-transform: uppercase;
-  font-family: LehmannW08;
+  font-family: "FinalSix";
 }
 
 .divider {
@@ -59,7 +59,7 @@
   font-size: 24px;
   font-weight: 400;
   line-height: 1.3;
-  font-family: LehmannW08;
+  font-family: "FinalSix";
 }
 
 .description {
@@ -79,6 +79,7 @@
   cursor: pointer;
   transition: background-color 0.3s ease;
   width: fit-content;
+  font-family: "FinalSix";
 }
 
 .button:hover {
