--- a/src/components/homepage/section-banner/styles.module.css
+++ b/src/components/homepage/section-banner/styles.module.css
@@ -20,6 +20,14 @@
   color: white;
 }
 
+.overlay {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background: rgba(0, 0, 0, 0.679);
+  z-index: 1;
+}
+
 .content {
   position: relative;
   z-index: 2;
@@ -28,16 +36,16 @@
 }
 
 .title {
-  font-size: 52px;
-  font-weight: 400;
-  font-family: LehmannW08;
-  color: #bc9c6b;
+  font-size: 40px;
+  font-weight: 700;
+  font-family: "FinalSix";
+  color: #fff;
   margin-bottom: 1rem;
   line-height: 1.2;
 }
 
 .subtitle {
-  font-size: 1rem;
+  font-size: 16px;
   color: #fff;
   margin-bottom: 2rem;
 }
