--- a/src/components/homepage/section-equipe/styles.module.css
+++ b/src/components/homepage/section-equipe/styles.module.css
@@ -6,7 +6,7 @@
 .tag {
   display: inline-block;
   color: #bc9c6b;
-  font-family: LehmannW08;
+  font-family: "FinalSix";
   font-size: 14px;
   position: relative;
   margin-bottom: 14px;
@@ -25,7 +25,7 @@
 }
 
 .title {
-  font-family: LehmannW08;
+  font-family: "FinalSix";
   font-size: 24px;
   font-weight: 700;
   margin-bottom: 1rem;
@@ -70,7 +70,7 @@
 }
 
 .subtitle {
-  font-family: LehmannW08;
+  font-family: "FinalSix";
   font-size: 24px;
   font-weight: 700;
   margin: 1rem 0;
