--- a/src/components/homepage/section-filiais/styles.module.css
+++ b/src/components/homepage/section-filiais/styles.module.css
@@ -15,13 +15,29 @@
   z-index: -1;
 }
 
-
 .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  padding: 4rem 2rem;
+  background: rgba(15, 20, 37, 0.85);
+}
+
+
+/* .overlay {
   position: relative;
   z-index: 1;
   padding: 4rem 2rem;
   background: rgba(15, 20, 37, 0.85); 
-}
+} */
 
 .content {
   max-width: 1200px;
@@ -33,21 +49,20 @@
 .tag {
   display: inline-block;
   color: #bc9c6b;
-  font-family: LehmannW08;
-  font-size: 14px;
+  font-family: "FinalSix";
+  font-size: .85rem;
   position: relative;
   margin-bottom: 0.5rem;
 }
-
 .divider {
-  width: 40px;
+  width: 70px;
   height: 2px;
   background-color: #bc9c6b;
   margin: 4px auto 0;
 }
 
 .title {
-  font-family: LehmannW08;
+  font-family: "FinalSix";
   font-size: 24px;
   font-weight: 700;
   margin-bottom: 1.5rem;
