--- a/src/components/about/content/styles.module.css
+++ b/src/components/about/content/styles.module.css
@@ -1,6 +1,6 @@
 .aboutSection {
     padding: 4rem 2rem;
-    background-color: #151B2E;
+    /* background-color: #151B2E; */
     color: #ffffff;
     text-align: center;
 }
@@ -12,7 +12,7 @@
     line-height: 44px;
     text-transform: uppercase;
     margin-bottom: 1rem;
-    color: #BC9C6B;
+    color: #0f4196;
 }
 
 .subtitle {
@@ -22,7 +22,8 @@
     max-width: 1200px;
     margin-left: auto;
     margin-right: auto;
-    color: #ffffff;
+   color: #0f4196;
+
 }
 
 .contentWrapper {
@@ -58,7 +59,7 @@
     gap: 1.5rem;
     font-size: 1rem;
     line-height: 1.6;
-    color: #e2e2e2;
+    color: #0f4196
 }
 
 @media (max-width: 1024px) {
