--- a/src/components/common/filiais-cta/styles.module.css
+++ b/src/components/common/filiais-cta/styles.module.css
@@ -1,5 +1,5 @@
 .ctaContainer {
-  background-color: #BC9C6B;
+  background-color: #fae128;
   position: relative;
   overflow: visible;
   padding: 2rem 0;
@@ -62,8 +62,8 @@
 }
 
 .ctaButton {
-  background-color: #1C2033;
-  color: #fff;
+  background-color: #facd0a;
+  color: #0f1425;
   padding: 0.6rem 1.2rem;
   border: none;
   border-radius: 4px;
@@ -74,7 +74,7 @@
 }
 
 .ctaButton:hover {
-  background-color: #2b2f45;
+  background-color: #fae128;
 }
 
 @media (max-width: 875px) {
