--- a/src/components/common/footer/styles.module.css
+++ b/src/components/common/footer/styles.module.css
@@ -1,13 +1,18 @@
 .footerContainer {
-  color: #fff;
   padding: 2rem 1.5rem;
   font-size: 12px;
   width: 100%;
-  max-width: 1200px;
-  margin: 0 auto;
   padding: 24px 24px;
   font-weight: 700;
+
+  color: #053282;
+  background-color: #006efa;
+  width: 100%;
+  padding: 24px;
+  font-size: 12px;
+  font-weight: 700;
 }
+
 
 .footerContent {
   display: flex;
@@ -19,9 +24,9 @@
   gap: 2rem;
 }
 
-.footerLogo img {
+/* .footerLogo img {
   max-height: 60px;
-}
+} */
 
 .footerMenu {
   display: flex;
@@ -30,9 +35,9 @@
 }
 
 .footerMenu a {
-  color: #fff;
+  color: #faebc8;
   text-decoration: none;
-  font-weight: 400;
+  font-weight: 700;
   font-size: 12px;
 }
 
@@ -59,7 +64,7 @@
 
 .footerDivider {
   border: none;
-  border-top: 1px solid #BC9C6B;
+  border-top: 1px solid #0f4196;
   opacity: 0.3;
   margin: 1rem 0;
 }
@@ -67,7 +72,7 @@
 .footerCopy {
   text-align: center;
   font-size: 12px;
-  opacity: 0.8;
+  color: #faebc8;;
 }
 
 
