--- a/src/components/homepage/section-about/styles.module.css
+++ b/src/components/homepage/section-about/styles.module.css
@@ -41,7 +41,7 @@
 
 .tag {
   font-size: 14px;
-  color: #BC9C6B;
+  color: #053282;
   letter-spacing: 1px;
   font-weight: 400;
   text-transform: uppercase;
@@ -51,7 +51,7 @@
 .divider {
   width: 80px;
   height: 2px;
-  background-color: #BC9C6B;
+  background-color: #053282;
   margin-top: 4px;
 }
 
@@ -60,18 +60,19 @@
   font-weight: 400;
   line-height: 1.3;
   font-family: "FinalSix";
+  color: #0f4196;
 }
 
 .description {
   font-size: 1rem;
   line-height: 1.6;
-  color: #e2e2e2;
+  color: #0f4196
 }
 
 .button {
   margin-top: 1rem;
   padding: 0.8rem 1.5rem;
-  background-color: #bc9c6b;
+  background-color: #facd0a;
   color: #0f1425;
   border: none;
   border-radius: 4px;
@@ -83,7 +84,7 @@
 }
 
 .button:hover {
-  background-color: #a68358;
+  background-color: #fae128;
 }
 
 @media (max-width: 1024px) {
