--- a/src/components/common/footer/styles.module.css
+++ b/src/components/common/footer/styles.module.css
@@ -1,14 +1,8 @@
 .footerContainer {
-  padding: 2rem 1.5rem;
-  font-size: 12px;
-  width: 100%;
-  padding: 24px 24px;
-  font-weight: 700;
-
-  color: #053282;
-  background-color: #006efa;
-  width: 100%;
   padding: 24px;
+  background-color: #006efa;
+  color: #faebc8;
+  width: 100%;
   font-size: 12px;
   font-weight: 700;
 }
@@ -16,50 +10,67 @@
 
 .footerContent {
   display: flex;
-  align-items: center;
   justify-content: space-between;
+  align-items: flex-start;
   max-width: 1200px;
-  margin: 0 auto;
+  margin: 0px 10rem;
   flex-wrap: wrap;
-  gap: 2rem;
+  gap: 3rem;
 }
 
-/* .footerLogo img {
-  max-height: 60px;
-} */
-
-.footerMenu {
+.footerBrand {
   display: flex;
-  gap: 0.8rem;
-  text-align: center;
-}
-
-.footerMenu a {
-  color: #faebc8;
-  text-decoration: none;
-  font-weight: 700;
-  font-size: 12px;
-}
-
-.footerMenu a:hover {
-  text-decoration: underline;
-}
-
-.footerSocial {
-  display: flex;
+  flex-direction: column;
   align-items: center;
   gap: 1rem;
 }
 
+.footerSocial {
+  display: flex;
+  gap: 1rem;
+}
+
 .footerSocial a {
-  display: inline-block;
   transition: transform 0.3s ease, filter 0.3s ease;
-  cursor: pointer;
 }
 
 .footerSocial a:hover {
   transform: scale(1.1);
   filter: brightness(1.2);
+}
+
+.columnsWrapper {
+  display: flex;
+  gap: 3rem;
+  justify-content: flex-start;
+}
+
+.footerColumn {
+  min-width: 150px;
+}
+
+.footerTitle {
+  font-size: 14px;
+  font-weight: 700;
+  margin-bottom: 12px;
+  color: #faebc8;
+}
+
+.footerList {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.footerList a {
+  color: #faebc8;
+  text-decoration: none;
+  font-weight: 600;
+  font-size: 12px;
+}
+
+.footerList a:hover {
+  text-decoration: underline;
 }
 
 .footerDivider {
@@ -72,29 +83,20 @@
 .footerCopy {
   text-align: center;
   font-size: 12px;
-  color: #faebc8;;
+  color: #faebc8;
 }
-
 
 @media (max-width: 1024px) {
   .footerContent {
+    /* flex-direction: column; */
+    text-align: center;
+    justify-content: center;
+    gap: 2.5rem;
+    flex-wrap: wrap;
+  }
+
+  .columnsWrapper {
     flex-direction: column;
     align-items: center;
-    text-align: center;
-    gap: 1.5rem;
-  }
-
-  .footerMenu {
-    flex-direction: column;
-    gap: 20px;
-    margin: 1rem 0;
-  }
-
-  .footerSocial {
-    margin-top: 1rem;
-  }
-
-  .footerSocial a {
-    margin: 0 0.5rem;
   }
 }
