--- a/src/components/filiais/filiais-card/styles.module.css
+++ b/src/components/filiais/filiais-card/styles.module.css
@@ -8,9 +8,15 @@
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);  
 }
 
+.imageWrapper {
+  position: relative;
+  width: 100%;
+  height: 220px;
+  overflow: hidden;
+}
+
 .image {
   object-fit: cover;
-  display: block;
 }
 
 .content {
