--- a/src/components/homepage/section-filiais/styles.module.css
+++ b/src/components/homepage/section-filiais/styles.module.css
@@ -15,36 +15,25 @@
   z-index: -1;
 }
 
-/* .overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 10;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  padding: 4rem 2rem;
-  background: rgba(15, 20, 37, 0.85);
-} */
 
 
 .overlay {
   position: relative;
   z-index: 1;
-  padding: 4rem 2rem;
+  width: 100%;
   background: rgb(250 235 200 / 65%);
+  padding: 4rem 2rem;
+  min-height: 100vh;
+  box-sizing: border-box;
 }
 
 .content {
   max-width: 1200px;
   margin: 0 auto;
   text-align: center;
-  color: #ffffff;
+  width: 100%;
 }
+
 
 .tag {
   display: inline-block;
