--- a/src/components/homepage/section-news/styles.module.css
+++ b/src/components/homepage/section-news/styles.module.css
@@ -98,20 +98,39 @@
 
 
 .fullBarWrapper {
-    height: 120px;
-    margin-top: 3rem;
-    margin-bottom: 3rem;
-    border-top: 6px solid #0f4196;
-    border-bottom: 6px solid #0f4196;
-    overflow: hidden;
-    position: relative;
-    width: calc(100vw + 4rem);
-    left: 50%;
-    margin-left: calc(-50vw - 2rem);
+  margin: 3rem 0;
+  border-top: 6px solid #0f4196;
+  border-bottom: 6px solid #0f4196;
+  overflow: hidden;
+  width: calc(100vw + 4rem);
+  left: 50%;
+  margin-left: calc(-50vw - 2rem);
+  position: relative;
+  height: 120px;
 }
 
-.fullBarWrapper :global(img) {
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
+.fullBarTrack {
+  display: flex;
+  width: max-content;
+  height: 100%;
+}
+
+.fullBar {
+  object-fit: cover;
+  height: 100%;
+  width: auto;
+}
+
+@media (max-width: 768px) {
+  .fullBarWrapper {
+    width: 100vw;
+    margin-left: -50vw;
+    left: 50%;
+    height: 90px;
+    border-width: 4px;
+  }
+
+  .fullBar {
+    height: 90px;
+  }
 }
