--- a/src/components/homepage/section-news/styles.module.css
+++ b/src/components/homepage/section-news/styles.module.css
@@ -61,8 +61,8 @@
 }
 
 .productTitle {
-    font-family: FinalSix;
-    font-size: 16px;
+    font-family: Magnolia;
+    font-size: 26px;
     font-weight: 800;
     color: #0f4196;
     margin-bottom: 0.5rem;
@@ -74,6 +74,15 @@
     line-height: 1.5;
     max-width: 260px;
     margin: 0 auto;
+}
+@media (max-width: 1024px) {
+    .productTitle {
+        font-family: Magnolia;
+        font-size: 23px;
+        font-weight: 800;
+        color: #0f4196;
+        margin-bottom: 0.5rem;
+    }
 }
 
 @media (max-width: 768px) {
