--- a/src/components/homepage/section-about/styles.module.css
+++ b/src/components/homepage/section-about/styles.module.css
@@ -1,6 +1,5 @@
 .sectionAbout {
   color: white;
-  margin-top: 154px;
   padding-bottom: 4rem;
   overflow: hidden;
 }
@@ -85,8 +84,7 @@
 
 @media (max-width: 1024px) {
   .sectionAbout {
-    margin-top: 30px;
-    padding-bottom: 53px;
+    padding-bottom: 60px;
   }
   .contentWrapper {
     flex-wrap: wrap;
@@ -101,6 +99,8 @@
     display: flex;
     flex-direction: column;
     align-items: left;
+    line-height: normal;
+    font-size: 26px;
   }
   .description {
     font-size: 12px;
