--- a/src/components/homepage/section-dicas/styles.module.css
+++ b/src/components/homepage/section-dicas/styles.module.css
@@ -89,3 +89,43 @@
     font-size: 12px;
   }
 }
+
+.fullBarWrapper {
+  margin: 3rem 0;
+  border-top: 2px solid #0f4196;
+  border-bottom: 2px solid #0f4196;
+  overflow: hidden;
+  width: calc(100vw + 4rem);
+  left: 50%;
+  margin-left: calc(-50vw - 2rem);
+  position: relative;
+  height: 90px;
+  margin-top: 90px;
+}
+
+.fullBarTrack {
+  display: flex;
+  width: max-content;
+  height: 100%;
+}
+
+.fullBar {
+  object-fit: cover;
+  height: 100%;
+  width: auto;
+}
+
+@media (max-width: 768px) {
+  .fullBarWrapper {
+    width: 100vw;
+    margin-left: -50vw;
+    left: 50%;
+    height: 90px;
+    border-width: 4px;
+  }
+
+  .fullBar {
+    height: 90px;
+  }
+}
+
