--- a/src/components/homepage/section-receitas/styles.module.css
+++ b/src/components/homepage/section-receitas/styles.module.css
@@ -1,7 +1,7 @@
 .receitasSection {
   position: relative;
   width: 100%;
-  min-height: 100vh;
+  min-height: 61vh;
   overflow: hidden;
 }
 
@@ -19,9 +19,9 @@
   position: relative;
   z-index: 1;
   width: 100%;
-  background: rgb(250 235 200 / 65%);
+  background: hsla(213, 94%, 26%, 0.3);
   padding: 4rem 2rem;
-  min-height: 100vh;
+  min-height: 61vh;
   box-sizing: border-box;
 }
 
@@ -49,11 +49,10 @@
 }
 
 .title {
-  font-family: "FinalSix";
-  font-size: 24px;
+  font-family: "Magnolia";
+  font-size: 74px;
   font-weight: 700;
-  margin-bottom: 1.5rem;
-  color: #0f4196;
+  color: #FACD0A;;
 }
 
 .subtitle {
@@ -61,7 +60,7 @@
   max-width: 800px;
   margin: 0 auto 3rem;
   line-height: 1.6;
-  color: #0f4196;
+  color: #FAEBC8;
 }
 
 .cardsGrid {
