--- a/src/components/common/section-title/styles.module.css
+++ b/src/components/common/section-title/styles.module.css
@@ -1,6 +1,6 @@
 .wrapper {
   text-align: center;
-  margin-bottom: 2rem;
+  margin-bottom: 15px;
 }
 
 .title {
@@ -8,7 +8,7 @@
   font-weight: 800;
   color: #0f4196;
   font-family: Magnolia;
-  margin-bottom: 0.5rem;
+  margin-top: 25px
 }
 
 .divider {
@@ -20,5 +20,6 @@
 @media (max-width: 1024px) {
   .title {
     font-size: 26px;
+    margin-top: 20px;
   }
 }
