--- a/src/components/about/content/styles.module.css
+++ b/src/components/about/content/styles.module.css
@@ -1,98 +1,139 @@
 .aboutSection {
-    padding: 4rem 2rem;
-    /* background-color: #151B2E; */
-    color: #ffffff;
-    text-align: center;
+  padding: 5rem 2rem;
+  background: #FAEBC8;
+  color: #053282;
+  text-align: center;
 }
 
+.heroPhrase {
+  font-family: "Magnolia";
+  font-size: 48px;
+  color: #053282;
+  margin-bottom: 1rem;
+}
+
+.heroPhrase span {
+  color: #facd0a;
+  font-family: "Magnolia";
+
+}
+
+
+
 .title {
-    font-family: "FinalSix";
-    font-size: 34px;
-    font-weight: 400;
-    line-height: 44px;
-    text-transform: uppercase;
-    margin-bottom: 1rem;
-    color: #0f4196;
+  font-family: "FinalSix";
+  font-size: 34px;
+  font-weight: 400;
+  line-height: 44px;
+  text-transform: uppercase;
+  margin-bottom: 1rem;
+  color: #0f4196;
 }
 
 .subtitle {
-    font-size: 20px;
-    line-height: 30px;
-    margin-bottom: 91px;
-    max-width: 1200px;
-    margin-left: auto;
-    margin-right: auto;
-   color: #0f4196;
-
+  font-family: "FinalSix";
+  font-size: 20px;
+  line-height: 32px;
+  margin: 0 auto 70px auto;
+  max-width: 900px;
+  color: #0F4196;
 }
 
+
 .contentWrapper {
-    display: flex;
-    align-items: stretch;
-    gap: 2rem;
-    max-width: 1200px;
-    margin: 0 auto;
-    flex-wrap: wrap;
+  display: flex;
+  align-items: stretch;
+  gap: 2rem;
+  max-width: 1200px;
+  margin: 0 auto;
+  flex-wrap: wrap;
 }
 
 .imageWrapper {
-    position: relative;
-    flex: 1 1 400px;
-    height: auto;
-    aspect-ratio: unset;
-    border-top-left-radius: 16px;
-    overflow: hidden;
+  position: relative;
+  flex: 1 1 420px;
+  min-height: 500px;
+  border-radius: 20px;
+  overflow: hidden;
 }
 
 .image {
-    object-fit: cover;
-    height: 100%;
-    width: 100%;
+  object-fit: cover;
 }
 
 
 .textBlock {
-    flex: 1 1 500px;
-    text-align: left;
-    display: flex;
-    flex-direction: column;
-    gap: 1.5rem;
-    font-size: 1rem;
-    line-height: 1.6;
-    color: #0f4196
+  flex: 1 1 500px;
+  text-align: left;
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+  font-family: "FinalSix";
+  font-size: 18px;
+  line-height: 1.7;
+  color: #053282;
+}
+
+.textBlock strong {
+  color: #006EFA;
+}
+
+.finalImageWrapper {
+  position: relative;
+  margin-top: 4rem;
+  width: 100%;
+  max-width: 1200px;
+  height: 420px;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 20px;
+  overflow: hidden;
+}
+
+.finalImage {
+  object-fit: cover;
 }
 
 @media (max-width: 1024px) {
-    .aboutSection {
-        padding: 4rem 1rem;
-    }
 
-    .title {
-        margin-top: 4rem;
-        font-size: 22px;
-    }
+  .heroPhrase {
+    font-size: 32px;
+    margin-top: 4rem;
+  }
 
-    .subtitle {
-        font-size: 14px;
-        margin-bottom: 58px;
-    }
+  .aboutSection {
+    padding: 4rem 1rem;
+  }
 
-    .contentWrapper {
-        flex-direction: column;
-    }
+  .title {
+    margin-top: 4rem;
+    font-size: 22px;
+  }
 
-    .imageWrapper {
-        width: 100%;
-        min-height: 280px;
-    }
+  .subtitle {
+    font-size: 16px;
+  }
 
-    .textBlock {
-        text-align: justify;
-    }
+  .contentWrapper {
+    flex-direction: column;
+  }
+
+ .imageWrapper {
+    min-height: 300px;
+  }
+
+  .textBlock {
+    font-size: 16px;
+    text-align: justify;
+  }
+
+  .finalImageWrapper {
+    height: 300px;
+  }
 }
 
 @media (max-width: 768px) {
-    .aboutSection {
-        padding: 4rem 0rem;
-    }
+  .aboutSection {
+    padding: 3rem 1rem;
+  }
 }
