--- a/src/components/homepage/section-about/styles.module.css
+++ b/src/components/homepage/section-about/styles.module.css
@@ -36,8 +36,7 @@
   flex-direction: column;
   justify-content: center;
   gap: 1.2rem;
-  padding-left: 1rem;
-  padding-right: 1rem;
+  transform: translateX(calc(30% - 90px));
 }
 
 .tag {
